--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <body>
 
     <!-- Background Audio Element -->
-    <audio id="backgroundAudio" preload="auto" loop>
-      <source src="audio.mp3" type="audio/mp3" />
-      Your browser does not support the audio element.
-    </audio>
+  <audio id="backgroundAudio" preload="auto" loop autoplay>
+  <source src="audio.mp3" type="audio/mp3" />
+  Your browser does not support the audio element.
+</audio>
 
     <div class="container">
       <div class="one">
